--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -1,7 +1,7 @@
 ---
 ansible-navigator:
   logging:
-    critical
+    level: critical
   editor:
     command: vim_from_setting
     console: false
